fixed problem with footer overlapping

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -1,3 +1,7 @@
+.pre-footer-div {
+  height:130px;
+}
+
 .footer {
   background: #FFE4E3;
   color: rgba(0,0,0,0.3);
